[x] Updated language to British english [WIP] Work on Chapter 2 - group things up instead of one paper at a time?

--- a/1introduction.tex
+++ b/1introduction.tex
@@ -39,17 +39,17 @@ Example-based queries typically require users to provide inputs in the form of a
 In order to tackle the problem of interest, here are some research questions which will be addressed in this work:
 \begin{enumerate}  
 \item What ideology and concepts can we glean from existing techniques and take advantage of them for the sake of the topic of interest? 
-\item What can we represent surveillance video footages in the form of semantics? What types of semantics can be extracted? How can these semantics be translated into something which is easily interpretable for querying?
+\item How can we represent surveillance video footages in the form of semantics? What types of semantics can be extracted? How can these semantics be translated into something which is easily interpretable for querying?
 \item How can we develop a retrieval engine which takes in input queries which are intuitive, flexible and user friendly while providing accurate search results? 
 \end{enumerate}
 
 
 
 \subsection{Research Objectives}
-The objectives of this thesis can be divided into two main entities which are interdependent. As a whole, this work aims to develop a framework that \textbf{extracts} and \textbf{retrieves} semantics from \textbf{car park video footages}. In order to answer the research questions posed, the following objectives were set:
+The objectives of this thesis can be divided into two main entities which are interdependent. As a whole, this work aims to adopt and leverage on existing frameworks to design a objects semantics \textbf{extraction} and \textbf{retrieval} framework from \textbf{car park video footages}. In order to answer the research questions posed, the following objectives were set:
 
 \begin{enumerate}  
-\item To adopt and leverage on existing video data representation, semantics extraction and retrieval methods to design a surveillance video semantics extraction and retrieval framework.   
+%\item To adopt and leverage on existing video data representation, semantics extraction and retrieval methods to design a surveillance video semantics extraction and retrieval framework.
 \item To identify and extract suitable semantics which are easily interpretable while accurately describing car park surveillance scenes.
 \item To design a video retrieval engine that takes in user-described queries which are intuitive while reliably providing results fast and accurately. 
 \end{enumerate}
@@ -74,4 +74,4 @@ As this thesis comprise of a collection framework, formulation of concepts and a
 
 \subsection{Organization of Thesis}
 
-The roadmap of this thesis is laid out as follow: First, the introduction on the subject matter is discussed in this chapter. Next, related works in this research field are reviewed thoroughly to provide an idea what has been tried and solved, as well as what are the areas of improvements that could be addressed. This is then followed with a chapter that describes the overview of the proposed framework along with some reoccurring key concepts that will be used in this work (See Chapter \ref{section:keyconcepts}). Upon which, the proposed video semantics extraction methods for both the vehicle color and vehicle motion will be discussed. Next, the proposed retrieval engine along with its results are reported in Chapter \ref{section:retrievalengine}, this chapter also includes some analysis of the results based on the proposed methods in this thesis. Finally, the conclusion of this work along with a list of suggestions for future works is prepared in Chapter \ref{section:conclusion}. 
+The road-map of this thesis is laid out as follow: First, the introduction on the subject matter is discussed in this chapter. Next, related theoretical background concepts are described in Section \ref{subsec:relatedConcepts}, then related works in this research field are reviewed thoroughly to provide an idea what has been tried and solved, along with areas of improvements that could be addressed. This is then followed with a chapter that describes the overview of the proposed framework in Section \ref{section:framework}. Upon which, the proposed video semantics extraction methods for both the vehicle color and vehicle motion will be discussed. Next, the proposed retrieval engine along with its results are reported in Chapter \ref{section:retrievalengine}, this chapter also includes some analysis of the results based on the proposed methods in this thesis. Finally, the conclusion of this work along with a list of suggestions for future works is prepared in Chapter \ref{section:conclusion}. 
