--- a/llt.bib
+++ b/llt.bib
@@ -1,5 +1,46 @@
 % This file was created with JabRef 2.4.2.
 % Encoding: UTF8
+
+% ----- LIT REVIEW START -----
+
+@article{tian2017hierarchical,
+  title={Hierarchical and networked vehicle surveillance in its: A survey},
+  author={Tian, Bin and Morris, Brendan Tran and Tang, Ming and Liu, Yuqiang and Yao, Yanjie and Gou, Chao and Shen, Dayong and Tang, Shaohu},
+  journal={IEEE Transactions on Intelligent Transportation Systems},
+  volume={18},
+  number={1},
+  pages={25--48},
+  year={2017},
+  publisher={IEEE}
+}
+
+@article{chandran2017review,
+  title={A Review on Video-Based Techniques for Vehicle Detection, Tracking and Behavior Understanding},
+  author={Chandran, Ranjeethkumar and Raman, Naveen},
+  journal={International Journal of Advances in Computer and Electronics Engineering},
+  volume={2},
+  number={5},
+  pages={07--13},
+  year={2017}
+}
+
+@article{hsieh2015vehicle,
+  title={Vehicle color classification under different lighting conditions through color correction},
+  author={Hsieh, Jun-Wei and Chen, Li-Chih and Chen, Sin-Yu and Chen, Duan-Yu and Alghyaline, Salah and Chiang, Hui-Fen},
+  journal={IEEE Sensors Journal},
+  volume={15},
+  number={2},
+  pages={971--983},
+  year={2015},
+  publisher={IEEE}
+}
+
+
+
+
+
+% ----- LIT REVIEW END -----
+
 @techreport{barrow1977parametric,
   title={Parametric correspondence and chamfer matching: Two new techniques for image matching},
   author={Barrow, Harry G and Tenenbaum, Jay M and Bolles, Robert C and Wolf, Helen C},
